feat: update Main.java with comprehensive demo — loops all feature types with full output