@@ -1,5 +1,6 @@
 package com.qaassist.generator;
 
+import java.util.Arrays;
 import java.util.List;
 
 import com.qaassist.generator.engine.TestCaseGeneratorService;
@@ -12,20 +13,22 @@ import com.qaassist.generator.engine.registry.TemplateRegistry;
 
 public class Main {
     public static void main(String[] args) {
-        System.out.println("QA Assist Test Case Generator");
+            long startTime = System.currentTimeMillis();
+
+        System.out.println("================================================");
+        System.out.println("   QA ASSIST GENERATOR — ENGINE DEMO");
+        System.out.println("   Version 0.1.0");
+        System.out.println("================================================");
 
         TemplateRegistry registry = new TemplateRegistry();
         TestCaseGeneratorService generatorService = new TestCaseGeneratorService(registry);
 
-        // All test types selected
-        List<TestType> allTestTypes = List.of(TestType.values());
+        List<TestType> allTestTypes = Arrays.asList(TestType.values());
+
+        int totalFeatureTypes = 0;
+        int totalTestCasesGenerated = 0;
 
         for (FeatureType featureType : FeatureType.values()) {
-
-            System.out.println("\n========================================");
-            System.out.println("Feature Type: " + featureType);
-            System.out.println("========================================");
-
             TestCaseRequest request = new TestCaseRequest(
                     featureType + " Feature",
                     featureType,
@@ -36,11 +39,24 @@ public class Main {
 
             List<TestCase> testCases = generatorService.generate(request);
 
+            totalFeatureTypes++;
+            totalTestCasesGenerated += testCases.size();
+
+            System.out.println("\n========================================");
+            System.out.println("Feature Type: " + featureType + " (" + testCases.size() + " test cases)");
+            System.out.println("========================================");
+
             for (TestCase testCase : testCases) {
                 System.out.println(testCase);
             }
         }
 
+        long endTime = System.currentTimeMillis();
+        long durationMs = endTime - startTime;
+
         System.out.println("\n===== END OF GENERATION =====");
+        System.out.println("Total feature types: " + totalFeatureTypes);
+        System.out.println("Total test cases generated: " + totalTestCasesGenerated);
+        System.out.println("Generated " + totalTestCasesGenerated + " test cases in " + durationMs + "ms");
     }
 }
